[package]
name = "rustdart"
version = "0.1.0"
authors = ["vmasdani <valianmasdani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.55", features=["full"]}
quote = "1.0"